1. fix a link word wrap 2. try code highlight

--- a/src/style.css
+++ b/src/style.css
@@ -230,6 +230,7 @@ table thead tr th {
 
 a {
   color: var(--color-primary);
+  word-wrap: break-word;
 }
 
 a:hover,
